--- a/src/pages/MarketPage/MarketPage.css
+++ b/src/pages/MarketPage/MarketPage.css
@@ -107,6 +107,11 @@
   outline: none;
 }
 
+.paginationBarWrapper {
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
+
 @media (min-width: 768px) {
   .bestItemsContainer {
     margin-bottom: 40px;
